Overflow fixed in ff + safari, broken in chrome

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -145,3 +145,6 @@
 .toshow * {
   opacity: 0;
 }
+
+.typewriter {
+}
